<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FileExplorer</string>
    <string name="action_settings">Settings</string>
	<string name="content">image</string>
	<string name="change_view">Change view</string>
	<string name="action_add">Add element</string>
	<string name="title">useless</string>
	<string name="show_options">Show options</string>
	<string name="action_copy">Copy</string>
	<string name="action_cut">Cut</string>
	<string name="action_paste">Paste</string>
	<string name="action_rename">Rename</string>
	<string name="action_delete">Delete</string>
	<string name="add_file">Add file</string>
	<string name="add_folder">Add folder</string>
	<string name="description">Look over you</string>
	<string name="credits">Credits</string>
	<string name="search_img">Images</string>
	<string name="search_music">Musics</string>
	<string name="search_video">Videos</string>
	<string name="search_doc">Documents</string>
	<string name="search_folder">Folders</string>
	<string name="search_any">Any type of file</string>
    <string name="credits_text">Developed by imperio. Go on <a href="http://www.guillaume-gomez.fr">guillaume-gomez.fr</a> to see my web-CV.</string>
</resources>
