<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/file"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp" >

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/content"
            android:src="@drawable/add_file" />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/add_file"
            android:textSize="22sp" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#FFdddddd"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <LinearLayout
        android:id="@+id/folder"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp" >

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/content"
            android:src="@drawable/add_folder" />

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/add_folder"
            android:textSize="22sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>