<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/side_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ScrollView
                android:id="@+id/scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/mainLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/button_line"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="0.1"
                android:background="@color/black"
                android:orientation="horizontal"
                android:visibility="invisible" >

                <TextView
                    android:id="@+id/ac_copy"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/action_copy"
                    android:textColor="#ffffffff" />

                <TextView
                    android:id="@+id/ac_cut"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/action_cut"
                    android:textColor="#ffffffff" />

                <TextView
                    android:id="@+id/ac_paste"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/action_paste"
                    android:textColor="#ffffffff" />

                <TextView
                    android:id="@+id/ac_delete"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/action_delete"
                    android:textColor="#ffffffff" />

                <TextView
                    android:id="@+id/ac_rename"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/action_rename"
                    android:textColor="#ffffffff" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/slidermenu"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                layout="@layout/side_element" />
        </LinearLayout>
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>